# lollipop

./: .gitattributes  .gitignore  .gitlab-ci.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: deploying.yml  testing.yml
examples/: lollipop_example.yaml
lollipop/: __init__.py  _lollipop.yaml  bins.py  lollipop.py  lowlB.yaml  lowlE.yaml  lowlEB.yaml  tools.py
lollipop/tests/: test_lollipop.py
planck_2020_lollipop/: __init__.py  _lollipop.bibtex  _lollipop.yaml  _version.py  lollipop.py  lowlB.bibtex  lowlB.yaml  tools.py
planck_2020_lollipop/tests/: test_lollipop.py
